test/files/neg/t6162-overriding.check
t6162-overriding.scala:14: error: overriding method bar in class Bar is deprecated: `bar` will be made private in a future version.
  override def bar = 43
               ^
t6162-overriding.scala:15: error: overriding method baz in class Bar is deprecated
  override def baz = 43
               ^
two errors found
